--- a/src/index.html
+++ b/src/index.html
@@ -114,15 +114,15 @@
 								</div>
 								<div class="mry-mb-20">
 									<div class="mry-label mry-mb-5">Adress:</div>
-									<div class="mry-text">HTGS 4456 North Av.</div>
+									<div class="mry-text">A222, Sector - 48</div>
 								</div>
 								<div class="mry-mb-20">
 									<div class="mry-label mry-mb-5">Email:</div>
-									<a class="mry-text mry-default-link" href="mailto:support@alkeshmahaladesigns.in">support@alkeshmahaladesigns.in</a>
+									<a class="mry-text mry-default-link" href="mailto:alkeshmahalaa@gmail.com">alkeshmahalaa@gmail.com</a>
 								</div>
 								<div>
 									<div class="mry-label mry-mb-5">Phone:</div>
-									<a class="mry-text mry-default-link" href="#.">+91 8689 060 504</a>
+									<a class="mry-text mry-default-link" href="#.">+91 9811 325 023</a>
 								</div>
 							</div>
 						</div>
